Remove LD, format with Prettier
LD plot was previously removed from the Gene eQTL Visualizer, so LD-related code has been removed.
